msa/hands-on/microSvc1/600-micro-svc-1-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-micro-svc-1
  #namespace: istio-system
  labels:
    appName: herasoo
    svcName: micro-svc-1
    version: v1
spec:
  host: sample1-millet.container.ipc.kt.com
  port:
    #targetPort: 80    # has to be port name!!
    targetPort: http
  path: "/svc1"
  to:
    kind: Service
    name: service-micro-svc-1 #.herasoo.svc.cluster.local  # FQDN is not working
    weight: 100
  wildcardPolicy: None
